# zno-fhe-src

./: .cspell.json  .gitignore  Cargo.toml  Cargo.toml.bak  ISSUES.md  LICENSE-MIT  README.md  all.do  audit.do  benchmarks.do  build.do  examples.do  list.txt  publish.do  release.do  src.do  status.do  test-link.json  tests.do
helib-sys/: Cargo.toml
helib-sys-test/: Cargo.toml  build.rs
helib-sys-test/src/: main.rs
helib-test/: Cargo.toml
helib-test/src/: lib.rs
zno/: Cargo.toml
zno-dev/: Cargo.toml
zno-dev/src/: lib.rs
zno-dev/tests/: lib.rs
zno-fhe/: Cargo.toml
zno-fhe/_examples/: bgv_packed_arithmetic_sketch.rs
zno-fhe/src/: context.rs  error.rs  fhe.rs  lib.rs  metric.rs  prelude.rs  setters.rs
zno-fhe/src/fhe/: mod.rs  schema.rs
zno-fhe/src/helib/: bgv.rs  context.rs  error.rs  mod.rs  parameters.rs  schema.rs
zno-fhe/src/seal/: builder.rs  context.rs  error.rs  mod.rs  parameters.rs  schema.rs  setters.rs  version.rs
zno-helib-src/: Cargo.toml
zno-helib-src-test/: Cargo.toml  build.rs
zno-helib-src-test/artifacts/: includef  libf
zno-helib-src-test/src/: main.rs
zno-helib-src/helib/: .gitrepo
zno-helib-src/helib/src/: Context.cpp  Ctxt.cpp
zno-helib-src/openssl/: .gitrepo
zno-helib-src/scripts/: Doxyfile  README.md  generate-dot.sh  pair-dot.sh  tests-01-split.sh  tests-02-build.sh  tests-03-run.sh
zno-helib-src/scripts/dot/: 1004__classhelib_1_1_out_of_range_error.dot  1012__classhelib_1_1_invalid_argument.dot  1033__structhelib_1_1_expr.dot  1090__classhelib_1_1_general_automorph_precon___b_s_g_s.dot  1136__structhelib_1_1_const_multiplier__zz_x___c_k_k_s.dot  1152__classhelib_1_1_exception.dot  1170__structhelib_1_1_const_multiplier___double_c_r_t___c_k_k_s.dot  1172__classhelib_1_1_encrypted_array.dot  1186__classhelib_1_1_p_algebra_mod_derived.dot  1190__classhelib_1_1_p_algebra_mod_derived_3_01_p_a__cx_01_4.dot  1193__classhelib_1_1_runtime_error.dot  1269__classhelib_1_1_mat_mul1_d__derived.dot  1269__classhelib_1_1_mat_mul1_d__partial.dot  1284__structhelib_1_1_ptr_matrix.dot  1319__classhelib_1_1_block_mat_mul1_d__derived.dot  1319__classhelib_1_1_block_mat_mul1_d__partial.dot  1382__classhelib_1_1_i_o_error.dot  1409__classhelib_1_1_mat_mul1_d.dot  1413__classhelib_1_1_cmodulus.dot  1433__classhelib_1_1_eval_map.dot  1441__classhelib_1_1_thin_eval_map.dot  1474__structhelib_1_1_ptr_vector.dot  1597__classhelib_1_1_ptxt_array.dot  1638__classhelib_1_1_perm_precomp.dot  1688__classhelib_1_1_perm_indep_precomp.dot  1884__classhelib_1_1_mat_mul_full_exec.dot  1904__classhelib_1_1_block_mat_mul_full_exec.dot  2075__classhelib_1_1_block_mat_mul1_d_exec.dot  2143__classhelib_1_1_mat_mul___c_k_k_s.dot  2157__classhelib_1_1_context.dot  2179__classhelib_1_1_mat_mul___c_k_k_s___complex.dot  2208__classhelib_1_1_mat_mul1_d_exec.dot  2267__classhelib_1_1_random_full_matrix.dot  2268__classhelib_1_1_mat_mul_full_helper.dot  2323__classhelib_1_1_random_full_block_matrix.dot  2324__classhelib_1_1_block_mat_mul_full_helper.dot  2374__classhelib_1_1_encoded_mat_mul___c_k_k_s.dot  2389__classhelib_1_1_ptxt.dot  2586__classhelib_1_1_random_matrix.dot  2606__classhelib_1_1_random_multi_matrix.dot  (+100 more)
zno-helib-src/scripts/tests/: GTestApproxNums_CMakeLists.txt  GTestApproxNums_Test1.cpp  GTestBinaryArith_CMakeLists.txt  GTestBinaryArith_Test1.cpp  GTestBinaryCompare_CMakeLists.txt  GTestBinaryCompare_Test1.cpp  GTestBootstrapping_CMakeLists.txt  GTestBootstrapping_Test1.cpp  GTestEaCx_CMakeLists.txt  GTestEaCx_Test1.cpp  GTestEvalMap_CMakeLists.txt  GTestEvalMap_Test1.cpp  GTestExtractDigits_CMakeLists.txt  GTestExtractDigits_Test1.cpp  GTestFatboot_CMakeLists.txt  GTestFatboot_Test1.cpp  GTestGeneral_CMakeLists.txt  GTestGeneral_Test1.cpp  GTestIntraSlot_CMakeLists.txt  GTestIntraSlot_Test1.cpp  GTestMatmul_CMakeLists.txt  GTestMatmul_Test0.cpp  GTestMatmul_Test1.cpp  GTestMatmul_Test2.cpp  GTestPAlgebra_CMakeLists.txt  GTestPAlgebra_Test1.cpp  GTestPGFFT_CMakeLists.txt  GTestPGFFT_Test0.cpp  GTestPGFFT_Test1.cpp  GTestPGFFT_Test2.cpp  GTestPGFFT_Test3.cpp  GTestPGFFT_Test4.cpp  GTestPolyEval_CMakeLists.txt  GTestPolyEval_Test1.cpp  GTestPowerful_CMakeLists.txt  GTestPowerful_Test1.cpp  GTestPtrVector_CMakeLists.txt  GTestPtrVector_Test1.cpp  GTestReplicate_CMakeLists.txt  GTestReplicate_Test1.cpp  (+8 more)
zno-helib-src/src/: lib.rs
zno-helib-sys/: Cargo.toml  build.rs
zno-helib-sys-test/: Cargo.toml  build.rs
zno-helib-sys-test/src/: main.rs
zno-helib-sys/_examples/: bgv_packed_arithmetic.rs
zno-helib-sys/examples/: bgv-binary-arithmetic.rs  tutorial-01-ckks-basics.rs
zno-helib-sys/ffi/: ffi_wrapper.cpp  ffi_wrapper.h  gmp.h
zno-helib-sys/ffi/NTL/: ConfigLog.h
zno-helib-sys/ffi/helib/: Context.h
zno-helib-sys/src/: lib.rs  main.rs  prelude.rs
zno-helib-sys/src/autocxx/: argmap.rs  context.rs
zno-helib-sys/src/bgv/: bgv_params.rs  bits.rs  bootstrap.rs  bootstrappable.rs  build.rs  c.rs  context.rs  error.rs  gens.rs  getters.rs  m.rs  metric.rs  mod.rs  mvec.rs  ords.rs  p.rs  parameters.rs  r.rs  setters.rs
zno-helib-sys/src/cxx-bridges/: context.rs
zno-helib-sys/src/helib/: bgv.rs  mod.rs  version.rs
zno-helib-sys/src/manual/: issue-2.rs  mod.rs
zno-helib-sys/src/zno/: mod.rs
zno-macro-draft/: Cargo.toml  README.md
zno-macro-draft/src/: lib.rs  zno.rs
zno-macro-draft/src/zno/: analyze.rs  generate.rs  lower.rs  parse.rs
zno-macro-draft/tests/: trace-dev.rs  trace.rs  ui.rs
zno-macro-draft/tests/spans/: black-box-false-local-async.rs  black-box-false-local-sync.rs  black-box-false-threads-async.rs  black-box-false-threads-sync.rs  default-name-local-async.rs  (+17 more)
zno-seal-src/: Cargo.toml  README.md
zno-seal-src/seal/: .gitrepo
zno-seal-src/src/: lib.rs
zno-seal-sys/: Cargo.toml  build.rs
zno-seal-sys/_examples/: bgv-binary-arithmetic.rs
zno-seal-sys/ffi/: ffi_wrapper.cpp  ffi_wrapper.h
zno-seal-sys/src/: lib.rs  prelude.rs
zno-test/: .expand  Cargo.toml  README.md  all.do  default.do  default.expand.do
zno-test/benches/: status.do
zno-test/integration/: status.do
zno/src/: lib.rs
(+376 files in other folders)
