[workspace]
resolver = "2"
members = [
  "zno-helib-src-test",
  "zno-helib-src",
  "zno-helib-sys-test",
  "zno-helib-sys",
  # "zno-helib-tool",
  # "zno-openfhe-src",
  # "zno-openfhe-sys",
  # "zno-openfhe-tool",
  # "zno-seal-src",
  # "zno-seal-sys",
  # "zno-seal-tool",
]
exclude = ['target']

[workspace.package]
version = "0.0.1"
authors = ["Mark Van de Vyver <mark@ckrd.io>"]

edition = "2021"
rust-version = "1.72.0"

description = "The package provides a FHE source of choice."
documentation = "https://docs.rs/ckrd-network/zno-fhe-src"
homepage = "https://github.com/ckrd-network/zno-fhe-src"
repository = "https://github.com/ckrd-network/zno-fhe-src"
license = "Apache-2.0/MIT"
readme = "README.md"
categories = ["cryptography"]
keywords = ["FHE", "BFV", "BGV", "zero-knowledge"]

[workspace.dependencies]
zno-helib-src = { path = "zno-helib-src" }
zno-helib-src-test = { path = "zno-helib-src-test" }

autocxx = "0.26.0"
autocxx-build = "0.26.0"
bssl-sys = { version = "0.1.0"}
cc = "1.0.83"
cmake = "0.1"
criterion = "0.5"
cxx = "1.0"
cxxbridge = "1"
cxx-build = "1.0"
dirs = "5.0.1"
fake = "2.8"
flate2 = { version = "1.0" }
insta = "1.34"
libc = { version = "0.2"  }
libloading = "0.6"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
mockall = "0.11"
pkg-config = "0.3.27"
proptest = "1.3"
quickcheck = "1.0"
regex = { version = "1.10.0", default-features = false, features = ["std"] }
serde = "1.0"
syn = "2.0"
tap = "1.0"
tar = { version = "0.4", default-features = false }

[package]
name = "zno-fhe-src"
version.workspace = true
authors.workspace = true

edition.workspace = true
rust-version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["static","helib"]
static = []
helib = []
openfhe = []
seal = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
