[workspace]
resolver = "2"
members = [
  "zno-fhe",
  "zno-dev",
  # "zno-helib-src-test",
  # "zno-helib-src",
  # "zno-helib-sys-test",
  # "zno-helib-sys",
  # "zno-helib-tool",
  # "zno-openfhe-src",
  # "zno-openfhe-sys",
  # "zno-openfhe-tool",
  "zno-seal-src-test",
  "zno-seal-src",
  # "zno-seal-sys-test",
  "zno-seal-sys",
  # "zno-seal-tool",
  "zno-test",
]
exclude = ['target']

[workspace.package]
version = "0.0.2"
authors = ["Mark Van de Vyver <mark@ckrd.io>"]

edition = "2021"
rust-version = "1.74.0"

description = "The package provides a FHE source of choice."
documentation = "https://docs.rs/ckrd-network/zno-fhe"
homepage = "https://github.com/ckrd-network/zno-fhe"
repository = "https://github.com/ckrd-network/zno-fhe"
license = "Apache-2.0/MIT"
readme = "README.md"
categories = ["cryptography"]
keywords = ["FHE", "BGV", "SEAL", "ZKP"]

[workspace.dependencies]
zno = { path = "zno" }
zno-dev = { path = "zno-dev" }
zno-fhe = { path = "zno-fhe" }
zno-helib-src = { path = "zno-helib-src" }
zno-helib-sys = { path = "zno-helib-sys" }
zno-helib-src-test = { path = "zno-helib-src-test" }
zno-macro = { path = "zno-macro" }
zno-seal-src = { path = "zno-seal-src" }
zno-seal-sys = { path = "zno-seal-sys" }
zno-seal-src-test = { path = "zno-seal-src-test" }
zno-test = { path = "zno-test" }

test-utilities = { path = "../test-utilities" }

async-std = { version = "1.12", features = ["attributes"] }
autocxx = "0.26.0"
autocxx-build = "0.26.0"
bssl-sys = "0.1.0"
cc = "1.0.83"
clap = "2.33"
cmake = "0.1"
criterion = "0.5"
cxx = "1.0"
cxx-build = "1.0"
dirs = "5.0.1"
fake = "2.8"
flate2 = { version = "1.0" }
futures = "0.3"
futures-timer = "3.0"
insta = "1.34"
inventory = "0.3"
libc = { version = "0.2"  }
libloading = "0.6"
macrotest = "1"
miette = { version = "7", features = ["fancy"] } # gives nicer error messages!
mockall = "0.11"
num-traits = "0.2"
pkg-config = "0.3.27"
proc-macro2 = "1.0"
proptest = "1.3"
quickcheck = "1.0"
quote = "1"
regex = { version = "1.10.0", default-features = false, features = ["std"] }
secrecy = { version = "0.8.0" }
serde = "1.0"
syn = "2.0"
tap = "1.0"
tar = { version = "0.4", default-features = false }
tokio = { version = "1.36", features = ["full"] }
trybuild = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
