[package]
name = "zno-helib-src-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "package"
required-features = ["package"]

[build-dependencies]
zno-helib-src = { path = "../zno-helib-src" }

[dependencies]
flate2 = { workspace = true, optional = true }
libc = { workspace = true }
tar = { workspace = true, optional = true }

[features]
package = ["tar", "flate2"]
