[package]
name = "zno-helib-src-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

# Find all key-definition pairs at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
zno-helib-src = { path = "../zno-helib-src" }

[dependencies]
libc = { workspace = true }
zno-helib-sys = { path = "../zno-helib-sys" }

[features]
default = ["static"]
static = []
