[package]
name = "zno-helib-src"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
  'helib/benchmarks/*',
  'helib/ci/*',
  'helib/cmake/*',
  'helib/docker/*',
  'helib/boringssl/*',
  'helib/documentation/*',
  'helib/examples/*',
  'helib/misc/*',
  'helib/utils/*',
]

[features]
default = ['package']
# This option bundles HElib and its dependencies (NTL and GMP) in one directory
# which can then be moved around freely on the system.
package = []
tests = []

[dependencies]
cmake.workspace = true
cxx.workspace = true
tap.workspace = true
