[package]
name = "zno-helib-sys"
version.workspace = true
authors.workspace = true

edition.workspace = true
rust-version.workspace = true

description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

links = "helib"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx.workspace = true
cxx.workspace = true
# libc.workspace = true

[build-dependencies]
zno-helib-src = { workspace = true, optional = true }
autocxx-build.workspace = true
miette.workspace = true
# bindgen = { workspace = true, optional = true, features = ["experimental"] }
# cc.workspace = true
dirs.workspace = true
pkg-config.workspace = true
vcpkg.workspace = true

[features]
default = ['vendored']
autocxx = []
vendored = ['zno-helib-src']

# This is here for tooling.
# GMP version to be used (and eventually downloaded) if `package` feature.
#   - Can be found at FETCHED_GMP_VERSION in CMakeLists.txt.
# NTL version to be used (and eventually downloaded) if `package` feature.
#   - Can be found at FETCHED_NTL_VERSION in CMakeLists.txt.
[package.metadata.pkg-config]
gmp = "6.2.1"
ntl = "11.5.1"
helib = "2.3.0"