[package]
name = "zno-seal-src"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
  'seal/android/*',
  'seal/cmake/*',
  'seal/dotnet/*',
  'seal/native/examples/*',
  'seal/native/bench/*',
  'seal/native/tests/*',
  'seal/pipelines/*',
  'seal/pkgconfig/*',
  'seal/tools/*',
]

[features]
default = ["static"]
static = []
tests = []

[dependencies]
cmake.workspace = true
cxx.workspace = true
tap.workspace = true
