[package]
name = "zno-fhe"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
zno-fhe = { workspace = true, optional = false}
zno-macro = { workspace = true, optional = false}
zno-seal-sys = { workspace = true, optional = true}
zno-helib-sys = { workspace = true, optional = true}

[features]
default = ["seal"]
seal = ["zno-seal-sys"]
helib = ["zno-helib-sys"]
